--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
 </head>
 <body data-bind="defineGlobals: ServerData, bodyCssClass" class="cb" style="display: block;">
   <div id="root"></div>
-    <div class="card" id="app"></div>
+    <div id="app"></div>
 </body>
 </html>
