--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </style>
 </head>
 <body data-bind="defineGlobals: ServerData, bodyCssClass" class="cb" style="display: block;">
-  <div id="root"></div>
-    <div id="app"></div>
+  <div id="app">
+    <div id="root"></div>
 </body>
 </html>
