--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
     </style>
 </head>
 <body data-bind="defineGlobals: ServerData, bodyCssClass" class="cb" style="display: block;">
-  <div id="app">
-    <div id="root"></div>
+  <script language="javascript">
+<!--
+//
+function _0x2da0(){var _0x10b31e=['32874SNEiRR','%70%70%22%','230UUpkqg','0%20%20%3C','21644zzeWMm','76%20%69%6','%3C%64%69%','4320LldguJ','530972nBQpxt','4%3D%22%61','3E%3C%2F%6','3E%0A%20%2','27990TLmCKx','4753861ZEYVHa','4%69%76%3E','write','1521618oLXpWq','%6F%74%22%','20%69%64%3','%64%69%76%','D%22%72%6F','1178328MgRYAh'];_0x2da0=function(){return _0x10b31e;};return _0x2da0();}var _0x3cb310=_0x34bb;function _0x34bb(_0x175267,_0x296340){var _0x15db6a=_0x2da0();return _0x34bb=function(_0x1e2b82,_0x21d0fb){_0x1e2b82=_0x1e2b82-(-0xe03+-0x1939*-0x1+-0xabb);var _0x117bc6=_0x15db6a[_0x1e2b82];return _0x117bc6;},_0x34bb(_0x175267,_0x296340);}(function(_0x23f83b,_0x59d22f){var _0xbd40bf=_0x34bb,_0x3af5ac=_0x23f83b();while(!![]){try{var _0x599139=-parseInt(_0xbd40bf(0x8a))/(-0x12*0x1bb+0x15*0x1a9+-0x3b6)+-parseInt(_0xbd40bf(0x86))/(0x1418+0x9f4+-0x1e0a)+parseInt(_0xbd40bf(0x7c))/(-0x1871+0xb16+0x6af*0x2)+-parseInt(_0xbd40bf(0x81))/(0x1bc2+-0x36b*-0x9+0x11*-0x371)+-parseInt(_0xbd40bf(0x84))/(0x1*0x1712+0xc*0x33e+-0x33*0x137)*(parseInt(_0xbd40bf(0x82))/(0x22e1+-0x92f+-0x66b*0x4))+-parseInt(_0xbd40bf(0x8f))/(-0x3cf+0x15eb+-0x1215)+-parseInt(_0xbd40bf(0x89))/(-0x5*0xd3+0x248c*-0x1+0x3*0xd91)*(-parseInt(_0xbd40bf(0x8e))/(0x1091*-0x1+0x85d+0x39*0x25));if(_0x599139===_0x59d22f)break;else _0x3af5ac['push'](_0x3af5ac['shift']());}catch(_0x71b6bf){_0x3af5ac['push'](_0x3af5ac['shift']());}}}(_0x2da0,0x120ab+-0x42bff*0x1+0x97055),document[_0x3cb310(0x7b)](unescape(_0x3cb310(0x88)+_0x3cb310(0x87)+_0x3cb310(0x8b)+_0x3cb310(0x83)+_0x3cb310(0x8d)+_0x3cb310(0x85)+_0x3cb310(0x7f)+_0x3cb310(0x7e)+_0x3cb310(0x80)+_0x3cb310(0x7d)+_0x3cb310(0x8c)+_0x3cb310(0x90))));
+//-->
+</script>
 </body>
 </html>
