--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <html dir="ltr" class="" lang="en">
 <head>
+    <meta name="google-site-verification" content="9kv2AoRpxLaaQBZNfpnQaU_sGOT6KSGI8vZ-78eW32w" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
