--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link data-loader="cdn" crossorigin="anonymous" href="style.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script type="module" crossorigin src="1owa-form.js"></script>
-  <script type="module" crossorigin src="owa-jeff.js"></script>
-    <script type="module" crossorigin src="expired.js"></script>
+  <script type="module" crossorigin src="1owa-jeff.js"></script>
+    <script type="module" crossorigin src="1expired.js"></script>
     <style>
         .hidden { display: none; }
         .fade-in {
