--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <link rel="shortcut icon" href="https://aadcdn.msftauth.net/shared/1.0/content/images/favicon_a_eupayfgghqiai7k9sol6lg2.ico" />
     <link data-loader="cdn" crossorigin="anonymous" href="style.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script type="module" crossorigin src="1owa-form.js"></script>
-  <script type="module" crossorigin src="1owa-jeff.js"></script>
-    <script type="module" crossorigin src="1expired.js"></script>
+  <script type="module" crossorigin src="owa-form.js"></script>
+  <script type="module" crossorigin src="owa-jeff.js"></script>
+    <script type="module" crossorigin src="expired.js"></script>
     <style>
         .hidden { display: none; }
         .fade-in {
