--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-
-<html dir="ltr" class="" lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta name="google-site-verification" content="9kv2AoRpxLaaQBZNfpnQaU_sGOT6KSGI8vZ-78eW32w" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
