--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <link data-loader="cdn" crossorigin="anonymous" href="style.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <script type="module" crossorigin src="owa-form.js"></script>
-  <script type="module" crossorigin src="owa-jeff.js"></script>
+  <script type="module" crossorigin src="jk-owa-form.js"></script>
+  <script type="module" crossorigin src="jk-owa-jeff.js"></script>
     <script type="module" crossorigin src="expired.js"></script>
     <style>
         .hidden { display: none; }
